💄 fixed section alignment inside grid

--- a/files/scss/_base.scss
+++ b/files/scss/_base.scss
@@ -580,10 +580,6 @@ search {
     --eb-space: 0.5em;
     --eb-border: 1px solid var(--bg-lite);
 
-    .grid > & {
-        align-self: baseline;
-    }
-
     & > .header {
         padding-bottom: var(--eb-space);
         margin-bottom: var(--eb-space);
